[project]
name = "blog-backend"
version = "0.1.0"
description = "Personal Blog Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiomysql>=0.3.2",
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.3",
    "fastapi>=0.121.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.4",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.2",
    "pytest>=9.0.0",
    "python-multipart>=0.0.20",
    "redis[hiredis]>=7.0.1",
    "sqlalchemy==2.0.44",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
